--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.4.1",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "daisyui": "^4.12.14",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
